:art: fix padding issues on modal and scrollbar style on data grid.

--- a/src/App.css
+++ b/src/App.css
@@ -17,12 +17,15 @@ body::-webkit-scrollbar-thumb {
 }
 
 .modal::-webkit-scrollbar {
-  width: 0.5em;
+  /* width: 0.5em; */
+  display: none;
   background-color: rgba(255, 255, 255, 0);
 }
 
 .modal::-webkit-scrollbar-thumb {
   display: none;
-  /* background-color: rgb(169, 169, 169);
-  border-radius: 1em; */
+  background-color: rgb(169, 169, 169);
+  /* border-radius: 1em; */
+  /* border-top-right-radius: 1em; */
+  /* border-bottom-right-radius: 1em; */
 }
